# pallet_recognition

./: CMakeLists.txt  CMakeLists.txt.user.ddca006.xml  README.md
config/: cond_removal_parameters.txt  icp_parameters.txt  ta_leafsize.txt
include/: cond_removal.h  cond_removal_after.h  extract_border.h  icp_pallet.h  loadpcl_file.h  momentOfInertia.h  planar_seg.h  segment_common.h  template_alignment.h
src/: cond_removal.cpp  cond_removal_after.cpp  extract_border.cpp  icp_pallet.cpp  loadpcl_file.cpp  main.cpp  momentOfInertia.cpp  planar_seg.cpp  template_alignment.cpp
test/: test_cluster_extraction.cpp  test_seg.cpp
